--- a/Branch.App/Content/Styles/Areas/Reach/_home.scss
+++ b/Branch.App/Content/Styles/Areas/Reach/_home.scss
@@ -22,7 +22,7 @@ body.reach {
 			background: radial-gradient(ellipse at center, rgba(61,61,124,0.5) 0%,rgba(61,61,124,1) 100%); /* W3C */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#803d3d7c', endColorstr='#3d3d7c',GradientType=1 ); /* IE6-8 fallback on horizontal gradient */
 			height: 100%;
-			
+
 			.container {
 				.name-flairs {
 					.col-md-12 {
@@ -52,7 +52,7 @@ body.reach {
 							margin-bottom: 5px;
 
 							@media (max-width: 767px) {
-								margin: 15px auto 0px auto;
+								margin: 15px auto 0 auto;
 							}
 						}
 
@@ -70,9 +70,13 @@ body.reach {
 					height: 321px;
 					width: 300px;
 					background-repeat: no-repeat;
+					-moz-transform: scaleX(-1);
+					-ms-transform: scaleX(-1);
+					-o-transform: scaleX(-1);
+					-webkit-transform: scaleX(-1);
 					transform: scaleX(-1);
-					filter: FlipH;
 					-ms-filter: "FlipH";
+					filter: FlipH;
 					position: absolute;
 					top: -21px;
 					right: 0;
