--- a/Branch.App/Views/Home/Index.cshtml
+++ b/Branch.App/Views/Home/Index.cshtml
@@ -78,8 +78,8 @@
 
 <div class="games">
 	<div id="Halo4" class="game" count-data-ref="1">
-		<div class="game-backup-cover Halo4">
-			<div class="game-cover Halo4"></div>
+		<div class="game-backup-cover Halo4" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/Halo4/cover1.jpg")')">
+			<div class="game-cover Halo4" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/Halo4/cover1.jpg")')"></div>
 			<div class="mask">
 				<div class="container">
 					<a href="@Url.Action("Index", "Home", new { area = "Halo4" })" class="alt">
@@ -95,8 +95,8 @@
 		</div>
 	</div>
 	<div id="Reach" class="game" count-data-ref="1">
-		<div class="game-backup-cover Reach">
-			<div class="game-cover Reach"></div>
+		<div class="game-backup-cover Reach" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/Reach/cover1.jpg")')">
+			<div class="game-cover Reach" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/Reach/cover1.jpg")')"></div>
 			<div class="mask">
 				<div class="container text-right">
 					<a href="@Url.Action("Index", "Home", new { area = "Reach" })" class="alt">
@@ -112,8 +112,8 @@
 		</div>
 	</div>
 	<div id="MCC" class="game" count-data-ref="1">
-		<div class="game-backup-cover MCC">
-			<div class="game-cover MCC"></div>
+		<div class="game-backup-cover MCC" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/MCC/cover1.jpg")')">
+			<div class="game-cover MCC" style="background-image: url('@(CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/MCC/cover1.jpg")')"></div>
 			<div class="mask soon">
 				<div class="container">
 					<h1>
