--- a/Branch.App/Areas/Reach/Views/Home/Index.cshtml
+++ b/Branch.App/Areas/Reach/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Template = "reach reach_homepage";
 	ViewBag.AlternativeFooter = true;
+	ViewBag.PageBackgroundCover = CdnHelpers.GetAssetLocale(false) + "Content/Images/Home/Covers/Reach/cover1.jpg";
 }
 
 <div id="content" class="bs-header" style="text-align: center;">
