--- a/Branch.App/Content/Styles/Areas/Identity/_identity.scss
+++ b/Branch.App/Content/Styles/Areas/Identity/_identity.scss
@@ -66,7 +66,7 @@
 
 	.details {
 		.input-section {
-			margin: 40px auto;
+			padding: 40px 0;
 
 			.col-md-6 {
 				> .title {
@@ -82,6 +82,86 @@
 
 				> .input-group {
 					margin-top: 10px;
+				}
+			}
+		}
+	}
+
+	.identity-header {
+		height: 350px;
+
+		@media (max-width: 768px) {
+			height: 240px;
+		}
+
+		> .container {
+
+			> h1 {
+				margin-top: 0;
+
+				@media (max-width: 768px) {
+					margin-top: auto;
+				}
+			}
+
+			> ul {
+				margin: 0;
+				padding: 0;
+				list-style-type: none;
+				font-size: 15px;
+
+				> li {
+					margin-right: 5px;
+					display: inline;
+				}
+			}
+
+			> .actions {
+				margin-top: 20px;
+			}
+
+			> .holy-shit-people {
+				position: absolute;
+				top: 21px;
+				right: 80px;
+				width: 460px;
+				height: 360px;
+
+				> .player {
+					background-repeat: no-repeat;
+					position: absolute;
+					background-size: cover;
+
+					&.a {
+						top: 33px;
+						right: 91px;
+						z-index: 100;
+						height: 327px;
+						width: 182px;
+					}
+
+					&.b {
+						top: 144px;
+						right: 4px;
+						z-index: 99;
+						width: 121px;
+						height: 216px;
+					}
+
+					&.c {
+						top: 161px;
+						right: 217px;
+						z-index: 98;
+						width: 111px;
+						height: 199px;
+						-moz-transform: scaleX(-1);
+						-ms-transform: scaleX(-1);
+						-o-transform: scaleX(-1);
+						-webkit-transform: scaleX(-1);
+						transform: scaleX(-1);
+						-ms-filter: "FlipH";
+						filter: FlipH;
+					}
 				}
 			}
 		}
