--- a/Branch.App/Views/Session/Create.cshtml
+++ b/Branch.App/Views/Session/Create.cshtml
@@ -27,11 +27,18 @@
 						<section class="input-section row">
 							<div class="col-md-6">
 								<span class="title">Username/Email</span>
+								<p>
+									<span class="tier">
+										Required
+									</span>
+									The username or email you used to sign up with.
+								</p>
 								<div class="input-group">
 									<span class="input-group-addon">@@</span>
 									@Html.TextBoxFor(v => v.Username, new { @class = "form-control" })
 								</div>
-
+							</div>
+							<div class="col-md-6">
 								@if (ViewContext.ViewData.ModelState.Any(x => x.Key == "Username"))
 								{
 									if (ViewContext.ViewData.ModelState.First(x => x.Key == "Username").Value.Errors.Any())
@@ -50,11 +57,18 @@
 						<section class="input-section row">
 							<div class="col-md-6">
 								<span class="title">Password</span>
+								<p>
+									<span class="tier">
+										Required
+									</span>
+									The secure password you used to sign up
+								</p>
 								<div class="input-group">
 									<span class="input-group-addon">*</span>
 									@Html.PasswordFor(v => v.Password, new { @class = "form-control" })
 								</div>
-								
+							</div>
+							<div class="col-md-6">
 								@if (ViewContext.ViewData.ModelState.Any(x => x.Key == "Password"))
 								{
 									if (ViewContext.ViewData.ModelState.First(x => x.Key == "Password").Value.Errors.Any())
@@ -70,17 +84,12 @@
 							</div>
 						</section>
 
-						<section class="input-section row">
-							<div class="col-md-6">
+						<section class="input-section row" style="margin-left: 5px; padding-top: 10px;">
+							<input type="submit" class="btn btn-primary" value="Sign In" />
+							<div style="margin-top: 10px;">
 								@Html.CheckBoxFor(v => v.RememberMe, new { style = "margin-right: 10px;" })
 								<span class="title">Remember Me</span>
 							</div>
-						</section>
-
-						<hr />
-
-						<section class="input-section row">
-							<input type="submit" class="btn btn-primary" value="Sign In" />
 						</section>
 					</div>
 				</div>
