--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -217,55 +217,57 @@ body.blog_view .blog-post {
 body.search .bs-header h1 {
   font-size: 30px;
   text-align: center; }
-body.search .ident-section .more-entries-button {
-  padding-top: 19px; }
-body.search .ident-section hr {
-  margin-top: 10px; }
-body.search .ident-section .ident-row {
-  list-style-type: none;
-  padding: 0; }
-  body.search .ident-section .ident-row .no-results {
-    font-size: 20px;
-    margin-left: 45px;
-    margin-top: 20px;
-    color: #666; }
-  body.search .ident-section .ident-row .entry {
-    height: 220px;
-    margin-bottom: 50px; }
-    body.search .ident-section .ident-row .entry a.nope {
-      color: inherit;
-      text-decoration: none; }
-      body.search .ident-section .ident-row .entry a.nope:hover {
+body.search .ident-section {
+  margin-top: 60px; }
+  body.search .ident-section .more-entries-button {
+    padding-top: 19px; }
+  body.search .ident-section hr {
+    margin-top: 10px; }
+  body.search .ident-section .ident-row {
+    list-style-type: none;
+    padding: 0; }
+    body.search .ident-section .ident-row .no-results {
+      font-size: 20px;
+      margin-left: 45px;
+      margin-top: 20px;
+      color: #666; }
+    body.search .ident-section .ident-row .entry {
+      height: 220px;
+      margin-bottom: 50px; }
+      body.search .ident-section .ident-row .entry a.nope {
         color: inherit;
         text-decoration: none; }
-    body.search .ident-section .ident-row .entry .spartan-image {
-      height: 100%;
-      background-repeat: no-repeat;
-      background-position-x: right; }
-    body.search .ident-section .ident-row .entry .mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(1, #ffffff));
-      background-image: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-      background-image: -moz-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-      background-image: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-      background-image: -ms-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%); }
-    body.search .ident-section .ident-row .entry .text-container {
-      position: absolute;
-      top: 5px;
-      left: 15px;
-      height: 100%;
-      width: 100%; }
-      body.search .ident-section .ident-row .entry .text-container > h2 {
-        margin-bottom: 0px;
-        color: #d4860c; }
-      body.search .ident-section .ident-row .entry .text-container > h3 {
-        margin-top: 0px;
-        font-size: 18px; }
+        body.search .ident-section .ident-row .entry a.nope:hover {
+          color: inherit;
+          text-decoration: none; }
+      body.search .ident-section .ident-row .entry .spartan-image {
+        height: 100%;
+        background-repeat: no-repeat;
+        background-position-x: right; }
+      body.search .ident-section .ident-row .entry .mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(1, #ffffff));
+        background-image: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+        background-image: -moz-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+        background-image: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+        background-image: -ms-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%); }
+      body.search .ident-section .ident-row .entry .text-container {
+        position: absolute;
+        top: 5px;
+        left: 15px;
+        height: 100%;
+        width: 100%; }
+        body.search .ident-section .ident-row .entry .text-container > h2 {
+          margin-bottom: 0px;
+          color: #d4860c; }
+        body.search .ident-section .ident-row .entry .text-container > h3 {
+          margin-top: 0px;
+          font-size: 18px; }
 body.search .focus-col {
   text-align: right;
   margin-top: 35px; }
