--- a/Branch.App/Views/Home/Index.cshtml
+++ b/Branch.App/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div class="container">
-	@*<%= render partial: 'partials/flash', locals: { flash: flash } %>*@
+	@Html.Partial("FlashMessage", true)
 </div>
 
 <div class="container marketing">
