--- a/Branch.App/Views/Shared/FlashMessage.cshtml
+++ b/Branch.App/Views/Shared/FlashMessage.cshtml
@@ -3,7 +3,7 @@
 	var haveContainer = Model;
 }
 
-<div id="flash-message-container" class="alert-container" style="display: none;">
+<div id="flash-message-container" class="alert-container" style="margin:0; padding:0; display: none;">
 	<div id="flash-message-box" class="alert alert-dismissable">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		<strong></strong>
