Impliented container option in flash messages

--- a/Branch.App/Areas/Identity/Views/Home/Index.cshtml
+++ b/Branch.App/Areas/Identity/Views/Home/Index.cshtml
@@ -66,9 +66,7 @@
 	</div>
 </div>
 
-<div class="container">
-	@Html.Partial("FlashMessage", false)
-</div>
+@Html.Partial("FlashMessage", true)
 
 <div class="container">
 	<div class="row">
