--- a/Branch.App/Views/Search/Index.cshtml
+++ b/Branch.App/Views/Search/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="bs-header">
 	<div class="container">
 		<h1>@(Model.Query)</h1>
-		<h1><strong>Search results</strong></h1>
+		<h1><strong>search results</strong></h1>
 	</div>
 </div>
 
