--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div id="home-index">
+	<div class="header">
+		<div class="generic-branch-mask">
+			<div class="container">
+				<h1>Branch</h1>
+				<p>Xbox, Halo, and Destiny stats - made easy 💃</p>
+			</div>
+		</div>
+	</div>
+</div>
