--- a/app/assets/stylesheets/base/footer.scss
+++ b/app/assets/stylesheets/base/footer.scss
@@ -1,3 +1,10 @@
 footer {
 	background: white;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	padding-left: 80px;
+	padding-right: 80px;
+
+	border-top: 2px solid $brand-primary;
+	border-bottom: 25px solid $brand-primary;
 }
