--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,30 @@
 	<%= yield %>
 
 	<footer>
-		<p>
-			&copy; Branch App, <span class="copyright-year"></span>
-		</p>
+		<div class="container">
+			<div class="info">
+				<ul>
+					<li>
+						Branch was built in
+						<a class="alt" target="_blank" href="https://golang.org/">Golang</a>,
+						<a class="alt" target="_blank" href="https://nodejs.org/">Node JS</a>, and
+						<a class="alt" target="_blank" href="http://rubyonrails.org/">Ruby on Rails</a>.
+					</li>
+					<li>
+						The source is avaiable on
+						<a class="alt" target="_blank" href="https://github.com/branch-app/">github/branch-app</a>
+						and licenced under the
+						<a class="alt" target="_blank" href="http://www.dbad-license.org/">DBAD Public License</a>.
+					</li>
+					<li>
+						&copy; Branch App, <span class="copyright-year"></span>
+					</li>
+				</ul>
+			</div>
+			<div class="map"></div>
+			<div class="clearfix"></div>
+		</div>
+		<div class="brand"></div>
 	</footer>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
