implemented larger emoji

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="generic-branch-mask">
 			<div class="container">
 				<h1>Branch</h1>
-				<p>Xbox, Halo, and Destiny stats - made easy 💃</p>
+				<p>Xbox Live, Halo, and Destiny stats - made easy <span class="emoji-love">💃</span></p>
 			</div>
 		</div>
 	</div>
