--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,4 +7,34 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="marketing-stats">
+		<div class="container-fluid">
+			<div class="col-md-4 marketing-row">
+				<i class="fa fa-refresh" aria-hidden="true"></i>
+				<span>Cached</span>
+				<p>
+					Stats are cached at various intervals - so viewing is always quick.
+					Also even if third party data-sources are down, cached stats are still
+					avaiable here.
+				</p>
+			</div>
+			<div class="col-md-4 marketing-row">
+				<i class="fa fa-github-alt" aria-hidden="true"></i>
+				<span>Open Source</span>
+				<p>
+					Completly open sourced - missing a feature? Submit an issue requesting
+					it, or a pull-request implementing it.
+				</p>
+			</div>
+			<div class="col-md-4 marketing-row">
+				<i class="fa fa-tasks" aria-hidden="true"></i>
+				<span>Leaderboards</span>
+				<p>
+					See how you're doing against your friends, boss, or the worlds best
+					players. Share it etc etc.
+				</p>
+			</div>
+		</div>
+	</div>
 </div>
