more homepage styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,10 +16,13 @@ $large-devices-width: 1200px;
 @import 'mixins/float.scss';
 @import 'mixins/masks.scss';
 
+@import 'partials/buttons.scss';
+
 @import 'base/footer.scss';
 @import 'base/navbar.scss';
 
 @import 'styles/home.scss';
+@import 'styles/halo-4/home.scss';
 
 * {
 	font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
