--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,18 @@
 			<div class="container">
 				<h1>Branch</h1>
 				<p>Xbox Live, Halo, and Destiny stats - made easy <span class="emoji-love">💃</span></p>
+
+				<form class="player-lookup col-md-offset-3 col-md-6 col-sm-12">
+					<p>
+						Looking for someone? <span class="emoji-love">🕵🏻</span>
+					</p>
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search for...">
+						<span class="input-group-btn">
+							<button class="btn btn-primary" type="submit">Search</button>
+						</span>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
@@ -16,7 +28,7 @@
 				<p>
 					Stats are cached at various intervals - so viewing is always quick.
 					Also even if third party data-sources are down, cached stats are still
-					avaiable here.
+					avaiable here. <span class="emoji-love">🔥</span>
 				</p>
 			</div>
 			<div class="col-md-4 marketing-row">
@@ -32,7 +44,7 @@
 				<span>Leaderboards</span>
 				<p>
 					See how you're doing against your friends, boss, or the worlds best
-					players. Share it etc etc.
+					players. Share it etc etc. <span class="emoji-love">💪🏻</span>
 				</p>
 			</div>
 		</div>
