--- a/app/assets/stylesheets/styles/home.scss
+++ b/app/assets/stylesheets/styles/home.scss
@@ -1,32 +1,40 @@
 #home-index {
 	min-height: 1400px;
 	> .header {
-		height: 550px;
+		height: 70vh;
 		text-align: center;
 		color: white;
 
 		transition: background-image 4s;
 		background-image: image-url('home/halo-5.jpg');
 		background-position: 0% 25%;
+		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
 
 		.container {
-			padding-top: 120px;
+			padding-top: 15vh;
 			padding-bottom: 40px;
 
+			> h1 { font-size: 45px; }
 			> p {
 				font-size: 20px;
+				> .emoji-love { font-size: 30px; }
+			}
 
-				> .emoji-love {
-					font-size: 30px;
+			> .player-lookup {
+				margin-top: 15vh;
+
+				> p {
+					font-size: 18px;
+					> .emoji-love { font-size: 30px; }
 				}
 			}
 		}
 	}
 
 	> .marketing-stats {
-		margin-top: 30px;
+		margin-top: 60px;
 		.marketing-row {
 			text-align: center;
 			border-right: 1px solid #eee;
@@ -38,6 +46,7 @@
 			> i {
 				font-size: 55px;
 				margin-bottom: 10px;
+				height: 70px;
 				display: block;
 			}
 			> span {
@@ -50,6 +59,7 @@
 				font-size: 14px;
 				margin-left: 20px;
 				margin-right: 20px;
+				> .emoji-love { font-size: 25px; }
 			}
 		}
 	}
